[tool.poetry]
name = "capraecavoli"
version = "0.1.0"
description = ""
authors = ["Fundor333 <fundor333@fundor333.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pocket-to-sqlite = "^0.2.1"
github-to-sqlite = "^2.8.2"
twitter-to-sqlite = "^0.21.3"
# goodreads-to-sqlite ="^0.5"
# pinboard-to-sqlite ="^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
